--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "15303859",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "Rugby Union is a dynamic and highly competitive sport played by tier one nations worldwide. The outcome of a rugby match is influenced by various factors, including team performance, player abilities, and historical records. This notebook presents a predictive model designed to forecast match outcomes among tier one rugby nations using a unique approach based on world rankings. Instead of scraping the web for world rankings at the time of each mathc, I create my own table consisting of only the tier one nations and use the same formula as World Rugby for calculating ratings (more information can be found here https://www.world.rugby/tournaments/rankings/explanation/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "33f1bcce",
    "metadata": {},
    "source": [
@@ -10,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "20f3186f",
    "metadata": {},
    "outputs": [],
@@ -78,7 +88,7 @@
     "# Add a column which specifies match result as either home_win away_win or draw\n",
     "df['result'] = df['margin'].apply(lambda x: 'home_win' if x > 0 else ('away_win' if x < 0 else 'draw'))\n",
     "\n",
-    "# Initialise rankings dictionary\n",
+    "# Initialise rankings dictionary, all teams start on 80\n",
     "ranking_points = {'Scotland': 80, 'England': 80, 'Wales': 80, 'Italy': 80, 'France': 80, 'Ireland': 80, 'New Zealand': 80, 'Argentina': 80, 'South Africa': 80, 'Australia': 80 }\n",
     "\n",
     "for i, row in df.iterrows():\n",
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "388e4e23",
    "metadata": {},
    "outputs": [
@@ -155,7 +165,7 @@
       "R-squared (R2): 0.45\n",
       "==================================================\n",
       "Model: Random Forest Regressor\n",
-      "Mean Squared Error (MSE): 226.61\n",
+      "Mean Squared Error (MSE): 227.41\n",
       "R-squared (R2): 0.38\n",
       "==================================================\n",
       "Model: Support Vector Regressor\n",
@@ -236,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "0e418bc3",
    "metadata": {},
    "outputs": [
@@ -373,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8bcb7b1a",
    "metadata": {},
    "outputs": [
@@ -382,16 +392,16 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression Results:\n",
-      "Accuracy: 1.00\n",
+      "Accuracy: 0.60\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    away_win       1.00      1.00      1.00         1\n",
-      "    home_win       1.00      1.00      1.00         2\n",
+      "    away_win       0.50      0.50      0.50         2\n",
+      "    home_win       0.67      0.67      0.67         3\n",
       "\n",
-      "    accuracy                           1.00         3\n",
-      "   macro avg       1.00      1.00      1.00         3\n",
-      "weighted avg       1.00      1.00      1.00         3\n",
+      "    accuracy                           0.60         5\n",
+      "   macro avg       0.58      0.58      0.58         5\n",
+      "weighted avg       0.60      0.60      0.60         5\n",
       "\n",
       "==================================================\n"
      ]
@@ -435,7 +445,7 @@
    "id": "f354db22",
    "metadata": {},
    "source": [
-    "So far, all of the matches have been predicted correctly, perhaps surprisingly as SA beat Scotland."
+    "So far, three out of five matches have been predicted correctly with wrong predictions in Wales vs Aus and South Africa vs Ireland."
    ]
   },
   {
